--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">DCS</string>
+    <string name="maps_activity">Location</string>
+    <string name="dcs_list_activity">DCS List</string>
+    <string name="dcs_activity">DCS Details</string>
+    <string name="message_list_activity">Message List</string>
+    <string name="message_activity">Message Details</string>
+    <string name="google_maps_key">null</string>
 </resources>
