--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="surface_activity">Communication</string>
     <string name="settings_activity">Settings</string>
     <string name="web_activity">Information</string>
+    <string name="share_activity">Share</string>
 
     <!-- Dialog Buttons -->
     <string name="ok">OK</string>
@@ -18,8 +19,13 @@
 
     <!-- About -->
     <string name="about_title">About</string>
-    <string name="about">DCS by K Ring Technologies Ltd. Version </string>
+    <string name="about">DCS by K Ring Technologies Ltd. Version</string>
 
+    <!-- Share -->
+    <string name="share_title">Sharing</string>
+    <string name="share">Nothing has been processed to share</string>
+
+    <!-- PREFS -->
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
