--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,12 +42,12 @@
 
     <!-- =========================== PREFS -->
     <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
+    <string name="mic_header">Audio</string>
+
     <string name="sync_header">Sync</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
+    <!-- Mic Preferences -->
+    <string name="mic_gains">Microphone level</string>
 
     <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
